--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 
     body {
         margin: 25px;
-        background-color: powderblue;
+        /*background-color: powderblue;*/
         font-family: arial, sans-serif;
         font-size: 14px;
     }
